--- a/themes/shine/css/shine/responsive.css
+++ b/themes/shine/css/shine/responsive.css
@@ -164,6 +164,7 @@ height:38px;
 .lang-curr { display:none;
 }
 .search-icon {
+display: none;
 right:5px;
 margin-top:10px;
 }
@@ -1313,7 +1314,7 @@ padding: 7px 6.8px;
     text-align: center;
     width: 300px;
 }
-.banner-slider-container .iosSlider .slider .item img{ height:200px;}
+.banner-slider-container .iosSlider .slider .item img{width: 60%;}
 .flex-direction-nav{ display:none;}
 .flexslider li .capction{ display:none;}
 #product.content_only div.primary_block div.pb-left-column,
@@ -1489,6 +1490,7 @@ float:left;
 left:0;
 }
 .search-icon {
+display: none;
 right:5px;
 margin-top:10px;
 }
@@ -2000,16 +2002,22 @@ border-bottom:none;
 .new_title {
 margin-bottom:15px;
 }
+.footer-column{
+  width:100%;
+}
 footer .inner {
 width:290px;
 margin-bottom:10px;
 padding:0 5px;
 }
+footer{
+  width: 320px;
+}
 .footer-column-last {
-width:300px;
+width:100%;
 }
 #container_form_news2 input[type="text"] {
-width:270px;
+width:210px;
 margin-bottom:8px;
 }
 footer address {
@@ -2644,7 +2652,7 @@ padding: 7px 6.8px;
     text-align: center;
     width: 450px;
 }
-.banner-slider-container .iosSlider .slider .item img{ height:200px;}
+.banner-slider-container .iosSlider .slider .item img{width: 50%;}
 .flex-direction-nav .flex-prev{ left:-74px;}
 .flexslider li .capction {
     margin-left: -360px !important;
@@ -2822,6 +2830,7 @@ float:left;
 left:0;
 }
 .search-icon {
+display: none;
 right:5px;
 margin-top:10px;
 }
@@ -3341,18 +3350,19 @@ border-bottom:none;
 margin-bottom:15px;
 }
 footer {
-padding-top:15px;
+width:480px;
 }
 footer .inner {
 width:460px;
 margin-bottom:10px;
 padding:0 5px;
 }
+
 .footer-column-last {
-width:235px;
+width:100%;
 }
 .footer-column {
-width:210px;
+width:100%;
 }
 .social ul li {
 margin-right:4px;
@@ -3370,6 +3380,13 @@ margin-bottom:20px;
 }
 .social {
 margin-top:15px;
+}
+.social {
+margin-top:-42px;
+margin-left: 46px;
+}
+.footer-bottom .inner {
+width:480px;
 }
 .footer-bottom .inner {
 width:450px;
@@ -4013,7 +4030,6 @@ ul#order_step li{ width:232px; margin-bottom:5px;}
     text-align: center;
     width: 530px;
 }
-.banner-slider-container .iosSlider .slider .item img{ height:385px;}
 .flex-direction-nav .flex-prev{ left:-74px;}
 .flexslider li .capction {
     margin-left: -485px !important;
@@ -4191,6 +4207,7 @@ float:left;
 left:0;
 }
 .search-icon {
+display: none;
 right:5px;
 margin-top:10px;
 }
@@ -4703,17 +4720,17 @@ border-bottom:none;
 margin-bottom:15px;
 }
 footer {
-padding-top:15px;
+width:530px;
 }
 footer .inner {
 width:530px;
 margin-bottom:10px;
 }
 .footer-column-last {
-width:245px;
+width:100%;
 }
 .footer-column {
-width:230px;
+width:100%;
 }
 .social h4 {
 margin:0 5px 6px 0;
@@ -4742,7 +4759,8 @@ float:none;
 text-align:center;
 }
 .social {
-margin-top:8px;
+margin-top:-42px;
+margin-left: 46px;
 }
 .footer-bottom .inner {
 width:530px;
@@ -5533,6 +5551,7 @@ float:left;
 left:0;
 }
 .search-icon {
+display: none;
 right:5px;
 margin-top:10px;
 }
@@ -6029,17 +6048,17 @@ border-bottom:none;
 margin-bottom:15px;
 }
 footer {
-padding-top:15px;
+width: 740px;
 }
 footer .inner {
 width:740px;
-margin-bottom:10px;
 }
 .footer-column-last {
 width:740px;
+float: none;
 }
 .footer-column {
-width:230px;
+width:50%;
 }
 .social h4 {
 margin:0 5px 6px 0;
@@ -6066,11 +6085,6 @@ margin-bottom:5px;
 .footer-bottom .bottom_links {
 float:right;
 text-align:center;
-}
-.social {
-margin-top:-30px;
-margin-left:15px;
-float:right;
 }
 .footer-bottom .inner {
 width:740px;
@@ -6676,6 +6690,7 @@ ul#order_step li{ width:178px;}
     text-align: center;
     width: 980px;
 }
+.banner-slider-container .iosSlider .slider .item img{width: 38%;}
 #product.content_only div.primary_block div.pb-left-column,
 #product.content_only section.primary_block div.pb-left-column {
     width:50%;
@@ -6848,6 +6863,7 @@ float:left;
 left:0;
 }
 .search-icon {
+display: none;
 right:5px;
 margin-top:10px;
 }
@@ -7172,6 +7188,9 @@ width:980px;
 #store-messages .message span {
 margin:0 0 15px 7px;
 }
+footer{
+  width: 980px;
+}
 
 .main-col {
 width:980px;
@@ -7328,7 +7347,7 @@ width:340px;
 }
 #container_form_news2 input[type="text"]{ width:195px;}
 .footer-column {
-width:200px;
+width:50%;
 }
 .footer-bottom .inner {
 width:980px;
